# agenticlaw

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.purpose  ORCHESTRATOR_META_COGNITION.md  README.md  SOUL.md  SPEC-v3-event-queue.md  VISION.md  test.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-template.yml
2026-2-17-monorepo-prep/: 2026-02-17-plan.md  2026-02-17-what-it-is.sh  20260217-frontier.ctx  20260217-status.ctx
agents/: SOUL.md  read_agent_docs.py
bee/: PROTOCOL.md  agentisoft.toml  install.sh
consciousness/: launch.sh
consciousness/souls/: L0-gateway.md  L1-attention.md  L2-pattern.md  L3-integration.md  core.md
crates/agenticlaw-agent/: Cargo.toml
crates/agenticlaw-agent/src/: context.rs  ctx_file.rs  lib.rs  queue.rs  runtime.rs  session.rs  subagent.rs
crates/agenticlaw-agent/tests/: agent_tests.rs
crates/agenticlaw-consciousness/: Cargo.toml
crates/agenticlaw-consciousness/src/: config.rs  cores.rs  ego.rs  injection.rs  lib.rs  main.rs  stack.rs  version.rs  watcher.rs
crates/agenticlaw-consciousness/tests/: consciousness_tests.rs
crates/agenticlaw-core/: Cargo.toml
crates/agenticlaw-core/src/: error.rs  lib.rs  openclaw_config.rs  protocol.rs  types.rs
crates/agenticlaw-core/tests/: core_tests.rs
crates/agenticlaw-gateway/: Cargo.toml
crates/agenticlaw-gateway/src/: auth.rs  lib.rs  main.rs  rpc.rs  server.rs  service.rs  tui.rs  tui_client.rs  ws.rs
crates/agenticlaw-kg/: Cargo.toml
crates/agenticlaw-kg/src/: executor.rs  lib.rs  main.rs  manifest.rs  persistent.rs  registry.rs  resource.rs
crates/agenticlaw-llm/: Cargo.toml
crates/agenticlaw-llm/src/: anthropic.rs  lib.rs  provider.rs  types.rs
crates/agenticlaw-llm/tests/: llm_tests.rs
crates/agenticlaw-tools/: Cargo.toml
crates/agenticlaw-tools/src/: lib.rs  registry.rs
crates/agenticlaw-tools/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  spawn.rs  subagent.rs  write.rs
crates/agenticlaw-tools/tests/: tools_tests.rs
docs/: CONSCIOUSNESS-ARCHITECTURE-AUDIT.md
operator/: CRITIQUE-v2.md  CRITIQUE.md  Cargo.toml  Dockerfile  README.md  SPEC-v2.md  SPEC.md  agentisoft.toml  docker-compose.yml  entrypoint-purpose.sh  entrypoint.sh  pg-config.yaml
operator/policies/: AGENT.json  LOCAL.json  OPERATOR.json  POKE.json  PROBE.json  READ.json  WRITE.json
operator/src/: builder.rs  live_tester.rs  main.rs  mock_provider.rs  mock_server.rs  policy.rs  proxy.rs  proxy_main.rs  tester.rs
src/: context.rs  format.rs  lib.rs  main.rs  openclaw.rs  parser.rs  session.rs  tests.rs  transform.rs  types.rs
src/supervisor/: conductor.rs  detect.rs  lifecycle.rs  log.rs  mod.rs  poll.rs  state.rs  tmux.rs  types.rs
terraform/: main.tf  outputs.tf  variables.tf
tests/: context_integration.rs
tests/fixtures/: real-session.jsonl
