[workspace]
resolver = "2"
members = [
    "crates/agenticlaw-core",
    "crates/agenticlaw-llm",
    "crates/agenticlaw-tools",
    "crates/agenticlaw-agent",
    "crates/agenticlaw-gateway",
    "crates/agenticlaw-consciousness",
    "crates/agenticlaw-kg",
]

[workspace.package]
version = "0.3.11"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web/networking
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
bytes = "1.5"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
globset = "0.4"
walkdir = "2"
regex = "1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Crypto
ring = "0.17"
base64 = "0.21"

# Async traits
async-trait = "0.1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Streaming
tokio-stream = "0.1"
eventsource-stream = "0.2"
pin-project-lite = "0.2"

# Cancellation
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[package]
name = "agenticlaw"
version = "0.3.11"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
agenticlaw-core = { path = "crates/agenticlaw-core" }
agenticlaw-gateway = { path = "crates/agenticlaw-gateway" }
agenticlaw-consciousness = { path = "crates/agenticlaw-consciousness" }

[[bin]]
name = "agenticlaw-fmt"
path = "src/main.rs"

[[bin]]
name = "agenticlaw-supervisor"
path = "src/bin/supervisor.rs"

[[bin]]
name = "agenticlaw"
path = "src/bin/agenticlaw.rs"
