[package]
name = "agenticlaw-llm"
version.workspace = true
edition.workspace = true

[dependencies]
agenticlaw-core = { path = "../agenticlaw-core" }

tokio = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = { workspace = true }
async-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

tokio-stream = "0.1"
eventsource-stream = "0.2"
pin-project-lite = "0.2"
async-trait = { workspace = true }
tokio-util = { workspace = true }
